# typify-parser

./: .jscsrc  .npmignore  .travis.yml  Makefile  README.md  bower.json  package.json  travis-install.sh  travis-script.sh
doc/: .gitignore  Makefile  typify.tex
hs/: .gitignore  LICENSE  Makefile  cabal.config  typify-parser.cabal
hs/generator/: Main.hs
hs/src/Language/: Typify.hs
hs/src/Language/Typify/: Types.hs
hs/tests/: Tests.hs
lib/: parser.js
src/: parser.purs
test/: errors.js  fixtures.js  simple.js
test/fixtures/: fixture-000  fixture-001  fixture-002  fixture-003  fixture-004  fixture-005  fixture-006  fixture-007  fixture-008  fixture-009  fixture-010  fixture-011  fixture-012  fixture-013  fixture-014  fixture-015  fixture-016  fixture-017  fixture-018  fixture-019  fixture-020  fixture-021  fixture-022  fixture-023  fixture-024  fixture-025  fixture-026  fixture-027  fixture-028  fixture-029  fixture-030  fixture-031  fixture-032  fixture-033  fixture-034  fixture-035  fixture-036  fixture-037  fixture-038  fixture-039  (+960 more)
