name:                typify-parser
version:             0.0.1
synopsis:            Type signature parser for typify
description:         This package is used as an reference implementation for JavaScript version
homepage:            https://github.com/phadej/typify-parser
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           2014 © Oleg Grenrus
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Typify
  build-depends:       base >=4.7 && <4.8,
                       parsec >=3.1.5 && <3.2,
                       aeson >=0.8 && <0.9,
                       text >= 1.1.1.3 && <1.2,
                       containers >=0.5.5 && <0.6,
                       QuickCheck >=2.7.6 && <2.8
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests/
  main-is:             Tests.hs
  ghc-options:         -Wall
  build-depends:       base >=4.5 && <5,
                       parsec >=3.1.5 && <3.2,
                       tasty == 0.8.1.3,
                       tasty-quickcheck == 0.8.1,
                       typify-parser
